# openai-cpp

./: CMakeLists.txt  LICENSE  README.md  example.cpp  http_client.cpp  http_client.h  openai.hpp
examples/: CMakeLists.txt  base_chat  base_chat.cpp
include/: http_client.hpp
